--- a/todo.txt
+++ b/todo.txt
@@ -28,10 +28,21 @@ xx exclude other buttons to be pushed
 xx setInfoRatioValues() IS THIS REALLY NECESSARY
 xx refactor segments in index.html
 
--  implement settings
+-  FIX: POINTS, PLUS, MINUS color misbehavior
+-  implement BLUE Schema
+-  optimize current colors
+-  implement gradient switch
+-  optimize current colors
+
 -  safe settings into localStorage
--  very nice icon
--  rename JS-files
+-  implement settings
+x  very nice icon
+x  rename JS-files
+
+LONG TERM TESTING, IMPROVEMENTS
+-------------------------------
+-  AppStates: FRESH_FETCHED, INIT_DONE, TIMEOUT_ELAPSED
+-  TimeoutFlag for reInit app
 -  remove all console.log(...)
 
 DEPLOYMENT
