--- a/todo.txt
+++ b/todo.txt
@@ -21,16 +21,17 @@ HOME
 ----
 x  FIX: POINTS, PLUS, MINUS color misbehavior on RED Theme
 x  FIX: Fullscreen does not switch color
--  implement special characters with penta sign
 -  implement gradient switch
 
 
 TRAIN
 -----
 
--  move info segment to options
--  create comsys sign
+x  move info segment to options
+x  create comsys sign
 -  implement BLUE Schema
+-  implement GREEN Schema
+-  implement YELLOW Schema
 -  optimize current colors
 
 OPEN
