readme and release-notes converted to AsciiDoc

--- a/release-notes.adoc
+++ b/release-notes.adoc
@@ -1,12 +1,11 @@
-scrumcards5 release notes
-=========================
+= scrumcards5 release notes
 :Author:    Kacper Bak
 :Email:     info@scrumcards5.com
-:Date:      05.12.2013
+:Date:      18.12.2013
 :Revision:  0.1.0
+:description: Mobile Scrum tool for agile software development. Displays Scrum values on all HTML5 capable mobile devices.
 
-Version 0.1.0
--------------
+== Version 0.1.0
 - Application init improved
 - JS deployment improved
 - AppInfo updated
@@ -17,6 +16,5 @@ Version 0.1.0
 - infinite symbol added
 - IPhone specific header added
 
-Version 0.0.2
--------------
+== Version 0.0.2
 - first launch of the app with basic functions
